<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="title_activity_about">About ALC</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="about_button">About</string>
    <string name="profile_button">Profile</string>
    <string name="name">Issa Habeebullah O.</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Nigeria</string>
    <string name="Email">Email: habeeb.finex@gmail.com</string>
    <string name="phone_number">Phone Number: +2348104473640</string>
    <string name="slack_username">Slack Username: @Har-beeb</string>
    <string name="content_description">Developer Image</string>
</resources>
